# ridgeback_description

./: CMakeLists.txt  README.md  package.xml
urdf/: .ridgeback.urdf.xacro.swp
